# electron-pico

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CROSS-COMPILE.md  GN_FLAGS_REF.md  KNOWLEDGE.md  NOTES.md  USER.md  pico.gn
.github/workflows/: build.yml
ref/: electron.md
scripts/: setup-sscache.sh
